Agregando el menu hamburguesa

--- a/Form.html
+++ b/Form.html
@@ -7,9 +7,22 @@
     <title>Comida Saludable</title>
     <link rel="stylesheet" href="styles.css" />  
     <link rel="stylesheet" href="Pie.css" />
+    <link rel="stylesheet" href="menu_toggle.css" />
   </head>
   <body>
     <nav class="encabezado" aria-label="Principal">
+       <!-- BOTÓN HAMBURGUESA -->
+
+   <button class="menu-toggle" aria-label="Abrir menú">
+
+    &#9776;
+
+    <!-- Ícono de hamburguesa -->
+
+   </button>
+
+   <!-- Contenido -->
+
         <a href="index.html" class="logo">
           <img src="img/logo.jpg" alt="Logo" />
         </a>
@@ -144,5 +157,6 @@
       </footer>
     </section>
 
+    <script src="menu_toggle.js"></script>
   </body>
 </html>
