--- a/Recetas.html
+++ b/Recetas.html
@@ -7,6 +7,8 @@
     <title>Comida Saludable</title>
     <link rel="stylesheet" href="styles.css" />    
     <link rel="stylesheet" href="Pie.css" />
+    <link rel="stylesheet" href="menu_toggle.css" />
+    
   </head>
   <body>
     <nav class="encabezado" aria-label="Principal">
@@ -14,8 +16,20 @@
         <img src="img/logo.jpg" alt="Logo" />
       </a>
 
+      <!-- BOTÓN HAMBURGUESA -->
+
+   <button class="menu-toggle" aria-label="Abrir menú">
+
+    &#9776;
+
+    <!-- Ícono de hamburguesa -->
+
+   </button>
+
+   <!-- Contenido -->
+
       <ul class="menu-horizontal">
-        <li><a href="index.html">Inicio</a></li>
+        <li><a href="Recetas.html">Inicio</a></li>
         <li><a href="#">Recetas</a></li>
         <li class="has-sub">
           <a href="#">Servicios</a>
@@ -138,6 +152,8 @@
         </div>
       </footer>
     </section>
+
+    <script src="menu_toggle.js"></script>
 
   </body>
 </html>
